# Containust

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMMERCIAL.md  Cargo.toml  LICENSE  LICENSE-APACHE  OPEN.md  README.md  clippy.toml  deny.toml  roadmap.md  rustfmt.toml  work.md
.cursor/rules/: architecture.mdc  coding-style.mdc  modularity.mdc  security.mdc  testing.mdc
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml
Formula/: ctst.rb
crates/containust-cli/: Cargo.toml  build.rs
crates/containust-cli/src/: build_info.rs  converter.rs  main.rs  output.rs
crates/containust-cli/src/commands/: build.rs  convert.rs  doctor.rs  exec.rs  images.rs  logs.rs  mod.rs  plan.rs  ps.rs  pull.rs  remove.rs  run.rs  stop.rs  vm.rs
crates/containust-cli/tests/: sprint3_gate.rs
crates/containust-common/: Cargo.toml
crates/containust-common/src/: codes.rs  config.rs  constants.rs  error.rs  lib.rs  redact.rs  types.rs
crates/containust-compose/: Cargo.toml
crates/containust-compose/src/: component.rs  distroless.rs  graph.rs  import.rs  lib.rs  resolver.rs
crates/containust-compose/src/parser/: ast.rs  lexer.rs  mod.rs  validator.rs
crates/containust-compose/tests/: perf_regression.rs
crates/containust-core/: Cargo.toml
crates/containust-core/src/: capability.rs  lib.rs  testutil.rs
crates/containust-core/src/cgroup/: cpu.rs  io.rs  memory.rs  mod.rs
crates/containust-core/src/filesystem/: mod.rs  mount.rs  overlayfs.rs  pivot_root.rs
crates/containust-core/src/namespace/: ipc.rs  mod.rs  mount.rs  network.rs  pid.rs  user.rs  uts.rs
crates/containust-ebpf/: Cargo.toml
crates/containust-ebpf/src/: file_monitor.rs  lib.rs  lifecycle.rs  net_monitor.rs  tracer.rs
crates/containust-ebpf/src/programs/: mod.rs  network.rs  syscall.rs
crates/containust-image/: Cargo.toml
crates/containust-image/src/: extract.rs  fetch.rs  fuse.rs  hash.rs  import.rs  layer.rs  lib.rs  pack.rs  path_confine.rs  preset.rs  preset_catalog.rs  reference.rs  registry.rs  source.rs  storage.rs
crates/containust-image/src/oci/: auth.rs  manifest.rs  mod.rs  name.rs  provenance.rs  pull.rs
crates/containust-image/tests/: perf_regression.rs  safe_extract.rs
crates/containust-runtime/: Cargo.toml
crates/containust-runtime/src/: container.rs  engine.rs  events.rs  exec.rs  lib.rs  logs.rs  metrics.rs  observe.rs  port_forward.rs  process.rs  process_mounts.rs  process_spawn.rs  process_spawn_io.rs  state.rs  supervise.rs  volume.rs
crates/containust-runtime/src/backend/: linux.rs  mod.rs  vm.rs
crates/containust-runtime/src/backend/vm/: assets.rs  assets_fetch.rs  initramfs.rs  lifecycle.rs  mod.rs  pidfile.rs  ports.rs  process.rs  protocol.rs  qemu.rs  response.rs  rpc.rs
crates/containust-runtime/src/network/: linux.rs  mod.rs
crates/containust-runtime/tests/: compat_matrix.rs  e2e_test.rs  spawn_user_pid.rs  upgrade_rehearsal.rs
crates/containust-sdk/: Cargo.toml
crates/containust-sdk/src/: builder.rs  event.rs  graph_resolver.rs  lib.rs
crates/containust-tui/: Cargo.toml
crates/containust-tui/src/: app.rs  event.rs  lib.rs  run.rs
crates/containust-tui/src/ui/: container.rs  dashboard.rs  ebpf.rs  metrics.rs  mod.rs
docs/: BETA_RC.md  CLI_REFERENCE.md  CONTRIBUTING.md  CTST_LANG.md  ERRORS.md  GA_CHECKLIST.md  HowToUse.md  MIGRATION_FROM_DOCKER.md  PACKAGING.md  PERFORMANCE.md  PROD_CHECKLIST.md  README.md  RUNBOOKS.md  SDK_GUIDE.md  SPEC.md  SUPPORT_POLICY.md  THREAT_MODEL.md  TUTORIALS.md  VERSIONING.md
docs/process/: BETA_RC.md  FEATURE_FREEZE.md  PROD_CHECKLIST.md  README.md
examples/: alpine_preset.ctst  docker-compose.yml  full_stack.ctst  healthcheck_example.ctst  hello.ctst  hello_world.ctst  microservices.ctst  nginx_static.ctst  node-hello.ctst  offline_deployment.ctst  rust_sdk_example.rs  sdk_composition.rs  sdk_lifecycle.rs  sdk_monitoring.rs  secrets_example.ctst  simple_container.ctst  web_stack.ctst  webapp.ctst
examples/templates/: nginx.ctst  postgres.ctst  redis.ctst
packaging/: nfpm.yaml
packaging/homebrew-tap/: README.md
packaging/winget/: Containust.ctst.yaml  README.md
scripts/: bump_packaging.sh
site/: README.md  index.html  main.js  styles.css
site/docs/: cli.html  docs.css  docs.js  index.html  language.html  migrate.html
tests/integration/: build_test.rs  compat_matrix.rs  compose_test.rs  run_test.rs
