[package]
name = "containust-cli"
version = "0.1.0"
description = "CLI binary (ctst) for the Containust container runtime."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "ctst"
path = "src/main.rs"

[dependencies]
containust-common = { workspace = true }
containust-sdk = { workspace = true }
containust-tui = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
