[package]
name = "containust-cli"
version.workspace = true
description = "CLI binary (ctst) for the Containust container runtime."
edition.workspace = true
license.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "ctst"
path = "src/main.rs"

[dependencies]
containust-common = { workspace = true }
containust-sdk = { workspace = true }
containust-tui = { workspace = true }
containust-runtime = { workspace = true }
containust-compose = { workspace = true }
containust-image = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
ctrlc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
