[package]
name = "containust-common"
version = "0.1.0"
description = "Shared types, error definitions, and constants for the Containust workspace."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
