[package]
name = "containust-image"
version.workspace = true
description = "Container image and layer management: storage, sources, hashing, and lazy-loading."
edition.workspace = true
license.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
containust-common = { workspace = true }
containust-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
fs2 = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
