[package]
name = "containust-runtime"
version.workspace = true
description = "Container lifecycle management: creation, execution, state tracking, and metrics."
edition.workspace = true
license.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
containust-common = { workspace = true }
containust-core = { workspace = true }
containust-ebpf = { workspace = true }
containust-image = { workspace = true }
containust-compose = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
which = { workspace = true }
reqwest = { workspace = true }
flate2 = { workspace = true }
fs2 = { workspace = true }
tar = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tar = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[lints]
workspace = true
